generate button finalized

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  margin: 0rem;
+  margin: 0;
   padding: 0;
   font-family:Georgia, 'Times New Roman', Times, serif;
 }
@@ -10,13 +10,10 @@ h1{
   margin-bottom: 0.5rem;
   color: #140246;
   text-shadow: black 0.1em 0.1em 0.2em;
-  /* color: #bdee0b; */
+
+  
 }
-/* h1:hover{
-  color: #140246;
-  cursor: pointer;
-  text-shadow: black 0.1em 0.1em 0.2em;
-} */
+
 body {
   background-image: linear-gradient(to right, #ca664d, #feb47b, #08307a, #91eae4);
   display: flex;
@@ -26,10 +23,10 @@ body {
   padding: 20px;
 }
 
-form {
+form, #resume-form-container {
   background-color: transparent;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(85, 11, 170, 0.1);
+  box-shadow: 0 4px 15px rgba(85, 11, 170, 0.1);
   max-width: 700px;
   width: 100%;
   padding: 20px;
@@ -76,7 +73,12 @@ input[type="file"] {
   cursor: pointer;
 }
 
-button[type="submit"] {
+button[type="submit"],
+#edit-btn,
+#back-btn,
+#shareLink-btn,
+#download-pdf
+ {
   background-color: #2b0557;
   color: rgb(214, 190, 190);
   border: none;
@@ -85,15 +87,62 @@ button[type="submit"] {
   font-size: 1em;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin: 5px;
 }
 
-button[type="submit"]:hover {
+button[type="submit"]:hover,
+#edit-btn:hover,
+#back-btn:hover,
+#shareLink-btn:hover,
+#download-pdf:hover
+{
   color: black;
   background-image: linear-gradient(to right, #ca664d, #feb47b, #08307a, #91eae4); 
    
 }
 .hidden {
   display: none;
+}
+/* .......... after generate resume ................. */
+#resumeContainer{
+  text-align: center;
+
+}
+#resume {
+  padding: 20px;
+  
+  background-color: transparent;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+#resume img.photo {
+  width: 150px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
+
+#resume h1 {
+  font-size: 1.8rem;
+  color: #000000;
+  margin-bottom: 0.5rem;
+}
+
+#resume h2 {
+  font-size: 1.3rem;
+  color: #2b0557;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #000000;
+  padding-bottom: 5px;
+}
+
+#resume p {
+  font-size: 1em;
+  color: #000000;
+  margin-bottom: 8px;
 }
 
 
